@@ -111,5 +111,4 @@ Version 1.3-svn:
       when friends join the lobby.
     * Added a sub tab of multiplayer to the preferences menu to view and edit
       your friends and ignores list.
-    * Improved performance when scrolling and when selecting units.
-    * The game is more responsive now when many units are visible.
+    * There were many performance improvements, the game runs faster now.
